Fix broken css

--- a/gtk-3.0/gtk.css
+++ b/gtk-3.0/gtk.css
@@ -58,8 +58,3 @@ menubar menu {
 	font-family: initial;
 	font-size: initial;
 }
-
-headerbar {
-	background: none;
-	background-color: #f5f5f5;
-}
